// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/checkbox/demo/basic.md correctly 1`] = `
<label
  class="alu-checkbox-wrapper"
>
  <span
    class="alu-checkbox"
  >
    <input
      class="alu-checkbox-input"
      type="checkbox"
    />
    <span
      class="alu-checkbox-inner"
    />
  </span>
  <span>
    Checkbox
  </span>
</label>
`;

exports[`renders ./components/checkbox/demo/check-all.md correctly 1`] = `
<div>
  <div
    style="border-bottom:1px solid #E9E9E9"
  >
    <label
      class="alu-checkbox-wrapper"
    >
      <span
        class="alu-checkbox alu-checkbox-indeterminate"
      >
        <input
          class="alu-checkbox-input"
          type="checkbox"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Check all
      </span>
    </label>
  </div>
  <br />
  <div
    class="alu-checkbox-group"
  >
    <label
      class="alu-checkbox-group-item alu-checkbox-wrapper alu-checkbox-wrapper-checked"
    >
      <span
        class="alu-checkbox alu-checkbox-checked"
      >
        <input
          checked=""
          class="alu-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="alu-checkbox-group-item alu-checkbox-wrapper"
    >
      <span
        class="alu-checkbox"
      >
        <input
          class="alu-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="alu-checkbox-group-item alu-checkbox-wrapper alu-checkbox-wrapper-checked"
    >
      <span
        class="alu-checkbox alu-checkbox-checked"
      >
        <input
          checked=""
          class="alu-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/checkbox/demo/controller.md correctly 1`] = `
<div>
  <p
    style="margin-bottom:20px"
  >
    <label
      class="alu-checkbox-wrapper alu-checkbox-wrapper-checked"
    >
      <span
        class="alu-checkbox alu-checkbox-checked"
      >
        <input
          checked=""
          class="alu-checkbox-input"
          type="checkbox"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Checked-Enabled
      </span>
    </label>
  </p>
  <p>
    <button
      class="alu-btn alu-btn-primary alu-btn-sm"
      type="button"
    >
      <span>
        Uncheck
      </span>
    </button>
    <button
      class="alu-btn alu-btn-primary alu-btn-sm"
      style="margin-left:10px"
      type="button"
    >
      <span>
        Disable
      </span>
    </button>
  </p>
</div>
`;

exports[`renders ./components/checkbox/demo/disabled.md correctly 1`] = `
<div>
  <label
    class="alu-checkbox-wrapper alu-checkbox-wrapper-disabled"
  >
    <span
      class="alu-checkbox alu-checkbox-disabled"
    >
      <input
        class="alu-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="alu-checkbox-inner"
      />
    </span>
  </label>
  <br />
  <label
    class="alu-checkbox-wrapper alu-checkbox-wrapper-disabled"
  >
    <span
      class="alu-checkbox alu-checkbox-checked alu-checkbox-disabled"
    >
      <input
        checked=""
        class="alu-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="alu-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`renders ./components/checkbox/demo/group.md correctly 1`] = `
<div>
  <div
    class="alu-checkbox-group"
  >
    <label
      class="alu-checkbox-group-item alu-checkbox-wrapper alu-checkbox-wrapper-checked"
    >
      <span
        class="alu-checkbox alu-checkbox-checked"
      >
        <input
          checked=""
          class="alu-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="alu-checkbox-group-item alu-checkbox-wrapper"
    >
      <span
        class="alu-checkbox"
      >
        <input
          class="alu-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="alu-checkbox-group-item alu-checkbox-wrapper"
    >
      <span
        class="alu-checkbox"
      >
        <input
          class="alu-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="alu-checkbox-group"
  >
    <label
      class="alu-checkbox-group-item alu-checkbox-wrapper"
    >
      <span
        class="alu-checkbox"
      >
        <input
          class="alu-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="alu-checkbox-group-item alu-checkbox-wrapper alu-checkbox-wrapper-checked"
    >
      <span
        class="alu-checkbox alu-checkbox-checked"
      >
        <input
          checked=""
          class="alu-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="alu-checkbox-group-item alu-checkbox-wrapper"
    >
      <span
        class="alu-checkbox"
      >
        <input
          class="alu-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="alu-checkbox-group"
  >
    <label
      class="alu-checkbox-group-item alu-checkbox-wrapper alu-checkbox-wrapper-checked alu-checkbox-wrapper-disabled"
    >
      <span
        class="alu-checkbox alu-checkbox-checked alu-checkbox-disabled"
      >
        <input
          checked=""
          class="alu-checkbox-input"
          disabled=""
          type="checkbox"
          value="Apple"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="alu-checkbox-group-item alu-checkbox-wrapper alu-checkbox-wrapper-disabled"
    >
      <span
        class="alu-checkbox alu-checkbox-disabled"
      >
        <input
          class="alu-checkbox-input"
          disabled=""
          type="checkbox"
          value="Pear"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="alu-checkbox-group-item alu-checkbox-wrapper alu-checkbox-wrapper-disabled"
    >
      <span
        class="alu-checkbox alu-checkbox-disabled"
      >
        <input
          class="alu-checkbox-input"
          disabled=""
          type="checkbox"
          value="Orange"
        />
        <span
          class="alu-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/checkbox/demo/layout.md correctly 1`] = `
<div
  class="alu-checkbox-group"
  style="width:100%"
>
  <div
    class="alu-row"
  >
    <div
      class="alu-col-8"
    >
      <label
        class="alu-checkbox-wrapper"
      >
        <span
          class="alu-checkbox"
        >
          <input
            class="alu-checkbox-input"
            type="checkbox"
            value="A"
          />
          <span
            class="alu-checkbox-inner"
          />
        </span>
        <span>
          A
        </span>
      </label>
    </div>
    <div
      class="alu-col-8"
    >
      <label
        class="alu-checkbox-wrapper"
      >
        <span
          class="alu-checkbox"
        >
          <input
            class="alu-checkbox-input"
            type="checkbox"
            value="B"
          />
          <span
            class="alu-checkbox-inner"
          />
        </span>
        <span>
          B
        </span>
      </label>
    </div>
    <div
      class="alu-col-8"
    >
      <label
        class="alu-checkbox-wrapper"
      >
        <span
          class="alu-checkbox"
        >
          <input
            class="alu-checkbox-input"
            type="checkbox"
            value="C"
          />
          <span
            class="alu-checkbox-inner"
          />
        </span>
        <span>
          C
        </span>
      </label>
    </div>
    <div
      class="alu-col-8"
    >
      <label
        class="alu-checkbox-wrapper"
      >
        <span
          class="alu-checkbox"
        >
          <input
            class="alu-checkbox-input"
            type="checkbox"
            value="D"
          />
          <span
            class="alu-checkbox-inner"
          />
        </span>
        <span>
          D
        </span>
      </label>
    </div>
    <div
      class="alu-col-8"
    >
      <label
        class="alu-checkbox-wrapper"
      >
        <span
          class="alu-checkbox"
        >
          <input
            class="alu-checkbox-input"
            type="checkbox"
            value="E"
          />
          <span
            class="alu-checkbox-inner"
          />
        </span>
        <span>
          E
        </span>
      </label>
    </div>
  </div>
</div>
`;
